# eunzip

./: Cargo.toml  README.md  build.rs  default.nix  flake.nix  release.nix  rustfmt.toml
nix/: sources.json
src/: cli.rs  main.rs  mmap.rs
