[package]
name = "eunzip"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2018"
license = "Unlicense OR MIT"

[dependencies]
zip = { version = "0.6.4", default-features = false, features = ["deflate"] }
encoding = "0.2.33"
clap = { version = "4.2.1", features = ["derive"] }
crossbeam-channel = "0.5.8"
rayon = "1.7.0"
memmap = "0.7.0"
fs2 = "0.4.3"
anyhow = "1.0.70"

[build-dependencies]
clap = { version = "4.2.1", features = ["derive"] }
clap_complete = "4.2.0"
encoding = "0.2.33"
anyhow = "1.0.70"
