[package]
name = "eunzip"
version = "0.1.0"
authors = ["foldu <foldu@protonmail.com>"]
edition = "2021"
license = "Unlicense OR MIT"

[dependencies]
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }
encoding = "0.2.33"
clap = { version = "4.4.12", features = ["derive"] }
crossbeam-channel = "0.5.10"
rayon = "1.8.0"
memmap = "0.7.0"
fs2 = "0.4.3"
anyhow = "1.0.79"

[build-dependencies]
clap = { version = "4.4.12", features = ["derive"] }
clap_complete = "4.4.5"
encoding = "0.2.33"
anyhow = "1.0.79"
